# catpile

./: .gitignore  CHANGELOG.md  LICENSE  README.md  VisualScriptingRef.md  pyproject.toml  setup.py
.github/workflows/: publish.yaml
catpile/: __init__.py  _version_check.py  builder.py  catui_emitter.py  catui_ir.py  catui_parser.py  cli.py  decompile_cli.py  decompiler.py  emitter.py  ir.py  lsp.py  mappings.py  optimizer.py  parser.py  schema.json  schema_parser.py  ui.py  ui_elements.json  web.py
catpile/tastes/: __init__.py  bracket.py  indent.py  registry.py  v1.py
checks/: cpile.json  cpile_s1.cat  cpile_s2.cat  main.cat
docs/: index.md
docs/catui/: 01-language-reference.md
docs/compiler/: 01-pipeline.md  02-ir.md  03-emitter.md  04-optimizer.md  05-schema.md  05-tastes.md
docs/examples/: 01-hello-world.md  02-interactive-button.md  03-user-profile.md
docs/guides/: 01-installation.md  02-quickstart.md  03-projects.md  04-decompiling.md  05-colors.md  06-migrating-from-json-catui.md
docs/lang/: 01-overview.md  02-variables.md  03-events.md  04-actions.md  05-control-flow.md  06-expressions.md  07-multi-script.md  08-snippets.md  09-tastes.md
docs/tools/: 01-cli.md  02-web-api.md  03-vscode.md
examples/: basic.cat  bracket.cat  chessable.cat  editor.html
tests/: test_all.py  test_optimizer.py
tests/sandbox/: real_page.json  test_real_page.py
