[build-system]
requires = ["setuptools>=64"]
build-backend = "setuptools.build_meta"

[project]
name = "catpile"
version = "1.1.0"
description = "Catpile — Pythonic DSL → CatWeb JSON compiler"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "SwirX"},
]
keywords = ["catweb", "roblox", "compiler", "dsl", "catlua"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Topic :: Software Development :: Compilers",
]

[project.urls]
Source = "https://github.com/swirx/catpile"
Documentation = "https://github.com/swirx/catpile/tree/main/docs"

[project.scripts]
cpile = "catpile.cli:main"
cpile-decompile = "catpile.decompile_cli:main"

[tool.setuptools.packages.find]
include = ["catpile*"]

[tool.setuptools.package-data]
catpile = ["schema.json", "ui_elements.json"]

[tool.setuptools]
include-package-data = true